se editó el regitro y unas cosas mas

--- a/project/templates/Materia_Prima/proovedores.html
+++ b/project/templates/Materia_Prima/proovedores.html
@@ -47,8 +47,8 @@
                         <option value="Blanco">Tela Blanca</option>
                         <option value="Militar">Tela Militar</option>
                         <option value="Mezclilla">Tela Mezclilla</option>
-                        <option value="Hilo">Cierre</option>
-                        <option value="Cierre">Hilo</option>
+                        <option value="Cierre">Cierre</option>
+                        <option value="Hilo">Hilo</option>
                       </select>
                     </div>
                 </div>
