--- a/project/templates/security/register.html
+++ b/project/templates/security/register.html
@@ -22,34 +22,65 @@
     {% endwith %}
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mt-lg-0">
-                    <form action="{{ url_for('auth.register') }}" method="post" role="form">
-                        <div class=" form-group">
-                            Correo
-                            <input type="email" name="email" class="form-control" id="email" placeholder="Correo"
-                                required>
-                        </div>
-                        <div class="form-group mt-3 mt-md-0">
-                            Nombre
-                            <input class="form-control" type="text" name="name" placeholder="Nombre" autofocus="">
-                        </div>
-                        <div class="form-group mt-3 mt-md-0">
-                            Contraseña
-                            <input type="password" class="form-control" name="password" id="password"
-                                placeholder="Contraseña" required>
-                        </div>
-                        <div class="text-center"><input class="btn btn-primary" type="submit" value="Signup"></div>
-                    </form>
-
+        <section id="contact" class="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mt-lg-0 mx-auto">
+                        <form>
+                            <div class="row">
+                                <div class="col-md-6 form-group">
+                                    <label for="email">Correo electrónico:</label>
+                                    <input type="email" name="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico" required>
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="nombre">Nombre:</label>
+                                    <input class="form-control" type="text" name="nombre" id="nombre" placeholder="Nombre" placeholder="Ingresa tu nombre" required>
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="password">Contraseña:</label>
+                                    <input type="password" class="form-control" name="password" id="password" placeholder="Ingresa tu contraseña" required>
+                                </div>
+                                <div class="col-md-12"><hr></div>
+                                <div class="col-md-6 form-group">
+                                    <label for="estado">Estado:</label>
+                                    <input type="text" class="form-control" name="estado" id="estado" placeholder="Ingresa tu estado" required>
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="municipio">Municipio:</label>
+                                    <input type="text" class="form-control" name="municipio" id="municipio" placeholder="Ingresa tu municipio" required>
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="codigoPostal">Código Postal:</label>
+                                    <input type="number" class="form-control" name="codigoPostal" id="codigoPostal" placeholder="Ingresa tu código postal" required>
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="colonia">Colonia:</label>
+                                    <input type="text" class="form-control" name="colonia" id="colonia" placeholder="Ingresa tu colonia" required>
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="calle">Calle:</label>
+                                    <input type="text" class="form-control" name="calle" id="calle" placeholder="Ingresa tu calle" required>
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="numeroInt">Número Interior:</label>
+                                    <input type="number" class="form-control" name="numeroInt" id="numeroInt" placeholder="Ingresa tu número interior" required>
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="numeroExt">Número Exterior (opcional):</label>
+                                    <input type="number" class="form-control" name="numeroExt" id="numeroExt" placeholder="Ingresa tu número exterior">
+                                </div>
+                                <div class="col-md-12 form-group">
+                                    <label for="referencia">Referencia:</label>
+                                    <input type="text" class="form-control" name="referencia" id="referencia" placeholder="Ingresa una referencia para ubicar tu domicilio" required>
+                                </div>
+                                <div id="mensaje-error" class="text-danger"></div>
+                            </div>
+                            <div class="text-center"><input class="btn btn-primary" id="btnRegistrar"  type="submit" value="Iniciar sesión"></div>
+                        </form>
+                    </div>
                 </div>
-
             </div>
-
-        </div>
-    </section><!-- End Contact Section -->
-
+        </section>
+        
 </main><!-- End #main -->
 {% endblock %}
