--- a/project/templates/security/register.html
+++ b/project/templates/security/register.html
@@ -62,12 +62,12 @@
                                     <input type="text" class="form-control" name="calle" id="calle" placeholder="Ingresa tu calle" required>
                                 </div>
                                 <div class="col-md-6 form-group">
-                                    <label for="numeroInt">Número Interior:</label>
-                                    <input type="number" class="form-control" name="numeroInt" id="numeroInt" placeholder="Ingresa tu número interior" required>
+                                    <label for="numeroExt">Número Exterior:</label>
+                                    <input type="number" class="form-control" name="numeroExt" id="numeroExt" placeholder="Ingresa tu número exterior" required>
                                 </div>
                                 <div class="col-md-6 form-group">
-                                    <label for="numeroExt">Número Exterior (opcional):</label>
-                                    <input type="number" class="form-control" name="numeroExt" id="numeroExt" placeholder="Ingresa tu número exterior">
+                                    <label for="numeroInt">Número Interior (opcional):</label>
+                                    <input type="number" class="form-control" name="numeroInt" id="numeroInt" placeholder="Ingresa tu número interior" >
                                 </div>
                                 <div class="col-md-12 form-group">
                                     <label for="referencia">Referencia:</label>
