cambios despues de la primera presentacion

--- a/project/templates/Materia_Prima/proovedores.html
+++ b/project/templates/Materia_Prima/proovedores.html
@@ -47,8 +47,14 @@
                         <option value="Blanco">Tela Blanca</option>
                         <option value="Militar">Tela Militar</option>
                         <option value="Mezclilla">Tela Mezclilla</option>
-                        <option value="Cierre">Cierre</option>
                         <option value="Hilo">Hilo</option>
+                        <option value="Cierre">Cierre</option>
+                        <option value="Carros">Carros</option>
+                        <option value="Reflejante">Reflejante</option>
+                        <option value="Argollas">Argollas</option>
+                        <option value="Bandola">Bandola</option>
+                        <option value="Hombrera">Hombrera</option>
+                        
                       </select>
                     </div>
                 </div>
