--- a/project/templates/productos/listaProductos.html
+++ b/project/templates/productos/listaProductos.html
@@ -22,9 +22,9 @@
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
         <div class="container">
-            <a href="{{ url_for('productos.addProducto') }}">
+            <!-- <a href="{{ url_for('productos.addProducto') }}">
                 <button type="button" class="btn btn-success">Agregar Productos</button>
-            </a>
+            </a> -->
             <h1>Productos Activos</h1>
             <table class="table mt-5" id="myTable">
                 <thead>
